Filte functionality. Scroll to top button

--- a/src/index.scss
+++ b/src/index.scss
@@ -21,6 +21,10 @@ $red-2: rgb(255, 64, 64);
     font-family: "Poppins", sans-serif;
 }
 
+.black-text {
+    color: $black;
+}
+
 .primary-bg {
     background-color: $primary-color;
     color: $white;
